# interactive-graph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/interactive_graph/: __main__.py  api.py  app.py  flowchart.py  graph.yaml  graphviz.py  visualization.py  work.py
src/static/: flowchart.min.js
src/templates/: generated.html  index.html  node_details.html
