[project]
name = "interactive_graph"
version = "0.0.1"
description = "A demo app for a graph-based software"
keywords = []
authors = [
    {name="Gatien Bouyer"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML==6.0.2",
    "networkx==3.3",
    "pygraphviz==1.13",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Bug Tracker" = "https://github.com/GatienBouyer/interactive_graph/issues"
"Source" = "https://github.com/GatienBouyer/interactive_graph"

[project.optional-dependencies]
dev = [
    "mypy",
    "isort",
    "autopep8",
    "types-networkx",
    "pylint",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 5

[tool.autopep8]
max_line_length = 100

[tool.mypy]
strict = true
